Update CRD api version to v1
- Update all CRDs version from v1alpha1 to v1 and update definition
- accordingly.
- Bump operator version to v0.0.5.
- Update docs with version v0.0.5.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/.osdk-scorecard.yaml
+++ b/.osdk-scorecard.yaml
@@ -5,9 +5,9 @@ scorecard:
   plugins:
     - basic:
         cr-manifest:
-          - "deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml"
+          - "deploy/crds/rp5.reportportal.io_v1_reportportal_cr.yaml"
         csv-path: "deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml"
     - olm:
         cr-manifest:
-          - "deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml"
+          - "deploy/crds/rp5.reportportal.io_v1_reportportal_cr.yaml"
         csv-path: "deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml"
