--- a/roles/reportportal/tasks/main.yml
+++ b/roles/reportportal/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: Fetch ReportPortalRestore Operand
   set_fact:
-    rp_restore_cr: "{{ lookup('k8s', kind='ReportPortalRestore', api_version='rp5.reportportal.io/v1alpha1', namespace=meta.namespace, resource_name=meta.name) }}"
+    rp_restore_cr: "{{ lookup('k8s', kind='ReportPortalRestore', api_version='rp5.reportportal.io/v1', namespace=meta.namespace, resource_name=meta.name) }}"
 
 - name: Recover data for postgresql or elasticsearch
   include: data_recovery.yml
