--- a/deploy/crds/rp5.reportportal.io_v1_serviceapiservicemonitor_cr.yaml
+++ b/deploy/crds/rp5.reportportal.io_v1_serviceapiservicemonitor_cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: rp5.reportportal.io/v1alpha1
+apiVersion: rp5.reportportal.io/v1
 kind: ServiceApiServiceMonitor
 metadata:
   name: example-service-api-servicemonitor
