--- a/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -297,8 +297,9 @@ spec:
                   httpGet:
                     path: /healthz
                     port: 6789
-                  initialDelaySeconds: 5
-                  periodSeconds: 3
+                  initialDelaySeconds: 10
+                  periodSeconds: 10
+                  timeoutSeconds: 5
                 name: reportportal-operator
                 resources: {}
                 volumeMounts:
