--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -39,8 +39,9 @@ spec:
             httpGet:
               path: /healthz
               port: 6789
-            initialDelaySeconds: 5
-            periodSeconds: 3
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
+            periodSeconds: 10
       volumes:
         - name: runner
           emptyDir: {}
