--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   crd_csv_verify:
-    runs-on: ubuntu-latest      
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
     # Runs operator testing with verify
     - name: Run operator testing with verification
-      run: docker run -v $PWD/deploy/olm-catalog:/community-operators:z quay.io/operator-framework/operator-testing:latest operator.verify --no-print-directory OP_PATH=community-operators/reportportal-operator VERBOSE=1
+      run: docker run -v $PWD/bundle:/community-operators:z quay.io/operator-framework/operator-testing:latest operator.verify --no-print-directory OP_PATH=community-operators/reportportal-operator VERBOSE=1
