--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # Runs operator testing with verify
-    - name: Run operator testing with verification
-      run: docker run -v $PWD/bundle:/community-operators:z quay.io/operator-framework/operator-testing:latest operator.verify --no-print-directory OP_PATH=community-operators/reportportal-operator VERBOSE=1
+    - name: Run operator-sdk scorecard bundle test
+      run: curl -LO https://github.com/operator-framework/operator-sdk/releases/download/${RELEASE_VERSION}/operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu -o operator-sdk && chmod +x operator-sdk && operator-sdk scorecard bundle
+      env:
+        RELEASE_VERSION: v1.0.0
