Set create es restore job as force
Currently without force, existing job can't be updated and the
restore task could fail.

With setting force, existing same name job left in the cluster
will be replaced.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/es_data_restore.yml
+++ b/roles/reportportal/tasks/es_data_restore.yml
@@ -1,4 +1,5 @@
 - name: Create elasticsearch snapshot restore job
   community.kubernetes.k8s:
     state: present
+    force: yes
     definition: "{{ lookup('template', 'es-snapshot-restore-job.yaml.j2') | from_yaml }}"
