--- a/roles/reportportal/tasks/es_data_restore.yml
+++ b/roles/reportportal/tasks/es_data_restore.yml
@@ -1,11 +1,10 @@
 - name: Delete existing elasticsearch snapshot restore job
   community.kubernetes.k8s:
     state: absent
-    definition:
-      apiVersion: batch/v1
-      kind: Job
-      name: es-s3-snapshot-restore
-      namespace: "{{ meta.namespace }}"
+    api_version: batch/v1
+    kind: Job
+    name: es-s3-snapshot-restore
+    namespace: "{{ meta.namespace }}"
 
 - name: Create elasticsearch snapshot restore job
   community.kubernetes.k8s:
