Update operator category to Integration & Delivery
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -57,7 +57,7 @@ metadata:
         }
       ]
     capabilities: Deep Insights
-    categories: Application Runtime
+    categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/waynesun09/rp5-operator:v0.0.5
     createdAt: "2020-09-17 09:45:00"
