Update bitnami images to quay.io
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -8,7 +8,7 @@ deploy_rp: yes
 # RP dependency services values
 # RabbitMQ deploy parameters
 deploy_rabbitmq: yes
-rabbitmq_image: docker.io/bitnami/rabbitmq:3.8.3-debian-10-r2
+rabbitmq_image: quay.io/bitnami/rabbitmq:3.8.3-debian-10-r2
 rabbitmq_volume_size: 8Gi
 load_definition: "{{ lookup('template', 'load-definition.json') | to_json | string | b64encode }}"
 
@@ -26,7 +26,7 @@ rabbitmq_secret: rabbitmq
 # PostgreSQL deploy parameters
 deploy_postgresql: yes
 db_storage_size: 8Gi
-pg_image: docker.io/bitnami/postgresql:11.7.0-debian-10-r9
+pg_image: quay.io/bitnami/postgresql:11.7.0-debian-10-r9
 
 # PostgreSQL service default values
 # Update in vars if deploy_postgresql is no and use existing PostgreSQL service
