--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -89,15 +89,15 @@ es_backup_schedule: "@daily"
 # ReportPortal services values
 # index default values
 index_replicas: 1
-index_image: reportportal/service-index:5.0.10
+index_image: quay.io/waynesun09/service-index:5.0.10
 
 # uat default values
 uat_replicas: 1
-uat_image: reportportal/service-authorization:5.3.3
+uat_image: quay.io/waynesun09/service-authorization:5.3.3
 
 # ui default values
 ui_replicas: 1
-ui_image: reportportal/service-ui:5.3.3
+ui_image: quay.io/waynesun09/service-ui:5.3.3
 
 # api default values
 api_replicas: 1
@@ -106,11 +106,11 @@ rp_amqp_queues: 10
 rp_amqp_queuesperpod: 10
 
 # migration default values
-migration_image: reportportal/migrations:5.3.3
+migration_image: quay.io/waynesun09/migrations:5.3.3
 
 # analyzer default values
 analyzer_replicas: 1
-analyzer_image: reportportal/service-auto-analyzer:5.3.3
+analyzer_image: quay.io/waynesun09/service-auto-analyzer:5.3.3
 
 # Recovery related default values
 pg_recovery: no
