--- a/bundle/manifests/rp5.reportportal.io_reportportalrestores.yaml
+++ b/bundle/manifests/rp5.reportportal.io_reportportalrestores.yaml
@@ -1,51 +1,33 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: reportportalrestores.rp5.reportportal.io
 spec:
   group: rp5.reportportal.io
   names:
     kind: ReportPortalRestore
+    listKind: ReportPortalRestoreList
     plural: reportportalrestores
     singular: reportportalrestore
-    shortNames:
-      - rpr
   scope: Namespaced
   versions:
   - name: v1
     schema:
       openAPIV3Schema:
-        type: object
+        description: ReportPortalRestore is the Schema for the reportportalrestores API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
-            name: ReportPortalRestore
             type: object
           spec:
-            description: Specification of the desired behavior of the ReportPortalRestore Operator.
-            type: object
+            description: Spec defines the desired state of ReportPortalRestore
             properties:
-              pg_recovery:
-                description: Enable Postgres recovery, need be 'yes' or 'no'
-                type: string
-              pg_s3_bucket_name:
-                description: The s3 Postgres bucket name, need be unique and valid bucket name
-                type: string
-              pg_recovery_target_time:
-                description: The Postgres recovery target time, need be unique and valid time, e.g. '2020-08-05 08:20:00 UTC'
-                type: string
-              pg_restic_password:
-                description: The s3 Postgres bucket restic password
-                type: string
               es_restore:
                 description: Enable elasticsearch snapshot restore, need be 'yes' or 'no'
                 type: string
@@ -58,25 +40,45 @@ spec:
               es_snapshot_bucket:
                 description: The Elasticsearch snapshot s3 bucket name
                 type: string
+              pg_recovery:
+                description: Enable Postgres recovery, need be 'yes' or 'no'
+                type: string
+              pg_recovery_target_time:
+                description: The Postgres recovery target time, need be unique and valid time, e.g. '2020-08-05 08:20:00 UTC'
+                type: string
+              pg_restic_password:
+                description: The s3 Postgres bucket restic password
+                type: string
+              pg_s3_bucket_name:
+                description: The s3 Postgres bucket name, need be unique and valid bucket name
+                type: string
+            type: object
           status:
-            description: Status results of an instance of ReportPortalRestore
+            description: Status defines the observed state of ReportPortalRestore
             properties:
               conditions:
                 description: The resulting conditions when a ReportPortalRestore is instantiated
                 items:
                   properties:
+                    lastTransitionTime:
+                      type: string
+                    reason:
+                      type: string
                     status:
                       type: string
                     type:
                       type: string
-                    reason:
-                      type: string
-                    lastTransitionTime:
-                      type: string
                   type: object
                 type: array
             type: object
+        type: object
     served: true
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: null
+  storedVersions: null
