--- a/config/manifests/bases/reportportal-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/reportportal-operator.clusterserviceversion.yaml
@@ -6,7 +6,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.2.0
     operators.operatorframework.io/project_layout: ansible.sdk.operatorframework.io/v1
-  name: reportportal-operator.vX.Y.Z
+  name: reportportal-operator.v0.0.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
