--- a/watches.yaml
+++ b/watches.yaml
@@ -10,7 +10,7 @@
     es_restore: no
     enable_rp_service_api_servicemonitor: no
   finalizer:
-    name: finalizer.reportportal
+    name: reportportal/finalizer
     role: /opt/ansible/roles/reportportal-remove
     vars:
       remove_minio: no
