Update health address in manager’s auth proxy patch
This is related to upgrade operator-sdk to v1.6.0:

https://sdk.operatorframework.io/docs/upgrading-sdk-version/v1.6.0/

https://github.com/operator-framework/operator-sdk/pull/4654

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -567,8 +567,9 @@ spec:
             spec:
               containers:
               - args:
-                - --metrics-addr=127.0.0.1:8080
-                - --enable-leader-election
+                - --health-probe-bind-address=:6789
+                - --metrics-bind-address=127.0.0.1:8080
+                - --leader-elect
                 - --leader-election-id=reportportal-operator
                 env:
                 - name: ANSIBLE_GATHERING
