--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,6 +22,8 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      securityContext:
+        runAsNonRoot: true
       containers:
         - name: manager
           args:
@@ -30,6 +32,8 @@ spec:
           env:
             - name: ANSIBLE_GATHERING
               value: explicit
+          securityContext:
+            allowPrivilegeEscalation: false
           image: controller:latest
           livenessProbe:
             httpGet:
