Add controller manager servicemonitor yaml
Also add the serviceaccount and update csv

This is related to upgrade operator-sdk to v1.6.0:

https://sdk.operatorframework.io/docs/upgrading-sdk-version/v1.6.0/

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -551,7 +551,7 @@ spec:
           - subjectaccessreviews
           verbs:
           - create
-        serviceAccountName: default
+        serviceAccountName: reportportal-operator-controller-manager
       deployments:
       - name: reportportal-operator-controller-manager
         spec:
@@ -604,6 +604,7 @@ spec:
                 resources: {}
               securityContext:
                 runAsNonRoot: true
+              serviceAccountName: reportportal-operator-controller-manager
               terminationGracePeriodSeconds: 10
       permissions:
       - rules:
@@ -626,7 +627,7 @@ spec:
           verbs:
           - create
           - patch
-        serviceAccountName: default
+        serviceAccountName: reportportal-operator-controller-manager
     strategy: deployment
   installModes:
   - supported: true
