--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,8 +1,17 @@
 resources:
 - manager.yaml
+
+generatorOptions:
+￼  disableNameSuffixHash: true
+￼
+￼configMapGenerator:
+￼- files:
+￼  - controller_manager_config.yaml
+￼  name: manager-config
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: controller
-  newTag: latest
+  newName: quay.io/waynesun09/rp5-operator
+  newTag: v0.0.7
