--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -2,13 +2,12 @@ resources:
 - manager.yaml
 
 generatorOptions:
-￼  disableNameSuffixHash: true
-￼
-￼configMapGenerator:
-￼- files:
-￼  - controller_manager_config.yaml
-￼  name: manager-config
+  disableNameSuffixHash: true
 
+configMapGenerator:
+- files:
+  - controller_manager_config.yaml
+  name: manager-config
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
