Fix kube rbac proxy UID
Resovle error with create operator controller:

Error: container create failed: time="2021-04-22T19:45:16Z" level=error
msg="container_linux.go:366: starting container process caused: chdir to
cwd (\"/home/nonroot\") set in config.json failed: permission denied"

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -602,6 +602,7 @@ spec:
                 resources: {}
                 securityContext:
                   allowPrivilegeEscalation: false
+                  runAsUser: 65532
               securityContext:
                 runAsNonRoot: true
               serviceAccountName: reportportal-operator-controller-manager
