--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -35,6 +35,7 @@ spec:
           value: explicit
         securityContext:
           allowPrivilegeEscalation: false
+          runAsUser: 65532
         livenessProbe:
           httpGet:
             path: /healthz
